chore(deps): bump the nifi group to 2.7.2 with 6 updates (#72)
* chore(deps): bump the nifi group with 6 updates

Bumps the nifi group with 6 updates:

| Package | From | To |
| --- | --- | --- |
| org.apache.nifi:nifi-extension-bundles | `2.6.0` | `2.7.1` |
| org.apache.nifi:nifi-utils | `2.6.0` | `2.7.1` |
| org.apache.nifi:nifi-lookup-services | `2.6.0` | `2.7.1` |
| org.apache.nifi:nifi-put-pattern | `2.6.0` | `2.7.1` |
| org.apache.nifi:nifi-mock | `2.6.0` | `2.7.1` |
| org.apache.nifi:nifi-standard-services-api-nar | `2.6.0` | `2.7.1` |


Updates `org.apache.nifi:nifi-extension-bundles` from 2.6.0 to 2.7.1

Updates `org.apache.nifi:nifi-utils` from 2.6.0 to 2.7.1

Updates `org.apache.nifi:nifi-lookup-services` from 2.6.0 to 2.7.1

Updates `org.apache.nifi:nifi-put-pattern` from 2.6.0 to 2.7.1

Updates `org.apache.nifi:nifi-mock` from 2.6.0 to 2.7.1

Updates `org.apache.nifi:nifi-standard-services-api-nar` from 2.6.0 to 2.7.1

---
updated-dependencies:
- dependency-name: org.apache.nifi:nifi-extension-bundles
  dependency-version: 2.7.1
  dependency-type: direct:production
  update-type: version-update:semver-minor
  dependency-group: nifi
- dependency-name: org.apache.nifi:nifi-utils
  dependency-version: 2.7.1
  dependency-type: direct:production
  update-type: version-update:semver-minor
  dependency-group: nifi
- dependency-name: org.apache.nifi:nifi-lookup-services
  dependency-version: 2.7.1
  dependency-type: direct:production
  update-type: version-update:semver-minor
  dependency-group: nifi
- dependency-name: org.apache.nifi:nifi-put-pattern
  dependency-version: 2.7.1
  dependency-type: direct:production
  update-type: version-update:semver-minor
  dependency-group: nifi
- dependency-name: org.apache.nifi:nifi-mock
  dependency-version: 2.7.1
  dependency-type: direct:development
  update-type: version-update:semver-minor
  dependency-group: nifi
- dependency-name: org.apache.nifi:nifi-standard-services-api-nar
  dependency-version: 2.7.1
  dependenc